[package]
name = "can-hal"
description = "CAN framework for microcontrollers in Rust"
version = "0.0.0-zero.1"
readme = "README.md"
keywords = ["no-std", "embedded", "can", "can-hal"]
license = "Apache-2.0"
authors = ["Boris Vinogradov <no111u3@gmail.com>"]
edition = "2018"
repository = "https://github.com/rust-io-hal/io-hal"

[dependencies]